--- a/解析传入的文本/解析传入的文本/Base.lproj/main.xib
+++ b/解析传入的文本/解析传入的文本/Base.lproj/main.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="_________">
+        <customObject id="-2" userLabel="File's Owner" customClass="_______">
             <connections>
                 <outlet property="view" destination="47Y-Ci-255" id="jdu-ND-x6j"/>
             </connections>
